Full responsive+minor styling center align bugfix

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,7 +10,7 @@
 }
 
 .App {
-  text-align:left;
+  text-align:center;
 }
 
 .App-logo {
